<resources>
    <string name="app_name">Loanners</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="Password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_yet_register">Not yet Registered? </string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="personalDetails">Personal Details</string>
    <string name="full_name">Full Name</string>
    <string name="ic_number">IC No.</string>
    <string name="ic_number_hint">IC Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone_no">Phone No.</string>
    <string name="phone_no_hint">Phone Number</string>
    <string name="street_1">Street Address Line 1</string>
    <string name="street_2">Street Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal / Zip Code</string>
    <string name="address">Address</string>
    <string name="education">University / College</string>
    <string name="education_hint">Name of University / College</string>
    <string name="done">Done</string>
    <string-array name="user">
        <item>Student</item>
        <item>Guardian</item>
    </string-array>
    <string name="url_server">https://noideamobile.000webhostapp.com/api/</string>
    <string name="url_student">student</string>
    <string name="url_loan">loan</string>
    <string name="url_approval_loan">approval_loan</string>
    <string name="url_company">company</string>
    <string name="url_semester">semester</string>
    <string name="url_search">/search.php</string>
    <string name="url_update">/update.php</string>
    <string name="url_delete">/delete.php</string>
    <string name="url_read_one">/read_one.php</string>
    <string name="url_read_by_email">/read_by_email.php</string>
    <string name="url_read">/read.php</string>
    <string name="url_create">/create.php</string>
    <string name="url_read_latest">/read_latest.php</string>
    <string name="url_read_most">/read_most.php</string>
    <string name="url_changePass">/changePassword.php</string>

    <string name="home">Home</string>
    <string name="title_activity_real_home">RealHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="studnet_loan">Student Loan</string>
    <string name="Profile">Profile</string>
    <string name="List">List</string>
    <string name="Status">Status</string>
    <string name="loanAmount">Loan Amount</string>
    <string name="loan_interest">Loan Interest</string>
    <string name="term_loan">Term Loan</string>
    <string name="loan_taken">Loan Taken On</string>
    <string name="loan">loan</string>
    <string name="list">list</string>
    <string name="myBankAccount">My Bank Account</string>
    <string name="schoolAndProgramme"><![CDATA[School & Programme]]></string>
    <string name="bookmark">Bookmarks</string>
    <string name="manageAccount">Manage Account</string>
    <string name="myStudent">My Student</string>
    <string name="title_activity_student_list">StudentList</string>
    <string name="bankAcc">My Bank Account</string>
    <string name="detail">Details</string>
    <string name="applyNow">Apply Now</string>
    <string name="changePassword">Change Password</string>
    <string name="verify">Account Verification</string>

    <string name="enterpass">Enter Current Password</string>
    <string name="enternewpass">Enter New Password</string>
    <string name="defaultLoan">-</string>
    <string name="semester">Semester</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="loanD">Loan Detail</string>
    <string name="signOut">Sign Out</string>
    <string name="permission_denied">Permission denied</string>
    <string name="image_view_stroke_take_picture">image view stroke take picture</string>
    <string name="image_view_solid_take_picture">image view solid take picture</string>
    <string name="image_view_take_picture">image view take picture</string>
    <string name="image_view_item_photo">image view item photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ApplyInfo">Apply Information</string>
    <string name="uploadfile">Upload file by</string>
</resources>
