<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393E46"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/textViewAddress2"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/education"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <EditText
        android:id="@+id/editTextStreet2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/street_2"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreet1" />

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/address"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/phone_no"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/gender"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIC" />

    <TextView
        android:id="@+id/textViewIC"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/ic_number"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFullName" />

    <EditText
        android:id="@+id/editTextIC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ic_number_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorfillSignIn"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewIC"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/personalDetails"
        android:textColor="@color/colorsignIn"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/full_name"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorfillSignIn"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewFullName"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/editTextIC">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorfillSignIn"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/colorfillSignIn" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorfillSignIn"
            android:text="@string/female"
            android:textColor="@color/colorfillSignIn" />
    </RadioGroup>

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/phone_no_hint"
        android:inputType="number|phone"
        android:textColor="@color/colorfillSignIn"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextStreet1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/street_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorfillSignIn"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreet2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/state"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextCity"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreet2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/postal_code"
        android:inputType="textPostalAddress"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toStartOf="@+id/editTextState"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
        android:importantForAutofill="no" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/education_hint"
        android:textColorHint="@color/colorfillSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAddress2"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_round"
        android:text="@string/done"
        android:textColor="@color/signIn_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_round"
        android:text="@android:string/cancel"
        android:textColor="@color/signIn_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>