<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourBackgroundProfileW"
    tools:context=".ProfileFragment"
    android:id="@+id/frameContainer2">

    <FrameLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorBackgroundProfileD">

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Profile"
                android:textColor="@color/colorsignIn"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="80dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >


                <LinearLayout

                    android:id="@+id/liner"
                    android:layout_width="match_parent"
                    android:layout_height="493dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/corner_radius"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/buttonProfileDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="120dp"
                        android:layout_marginRight="5dp"
                        android:background="#00FFFFFF"
                        android:drawableRight="@drawable/ic_account_circle_green_24dp"
                        android:drawablePadding="2dip"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/personalDetails"
                        android:textColor="#000000">

                    </Button>

                    <Button
                        android:id="@+id/buttonBankAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="#00FFFFFF"
                        android:drawableRight="@drawable/ic_account_balance_black_36dp"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/myBankAccount"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/buttonManageAcc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="#00FFFFFF"
                        android:drawableRight="@drawable/ic_lock_green_36dp"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/manageAccount"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/buttonSignOut"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="120dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/colorsignIn"
                        android:text="@string/signOut"
                        android:textColor="@android:color/white" />

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/profile" />


                <TextView
                    android:id="@+id/textViewuserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="150dp"
                    android:text="@string/user_name"
                    android:textColor="#000000"
                    android:textSize="18dp" />


            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        android:background="?android:attr/windowBackground">

    </com.google.android.material.bottomnavigation.BottomNavigationView>


</RelativeLayout>